# Research-and-optimization-of-the-algorithm-for-composition-of-power-series

./: ALGORITHMS.md  CMakeLists.txt  LICENSE  README.md  memory.csv  results_kl_tellegen_time.csv  time.csv
.github/workflows/: ci.yml
benchmarks/: CMakeLists.txt  bench_compose_memory.cpp  bench_compose_time.cpp  bench_helpers.hpp
docs/: ALGORITHMS.md
include/pscomp/: pscomp.hpp  span.hpp
include/pscomp/compose/: api.hpp  brent_kung.hpp  kinoshita_li.hpp  kinoshita_li_tellegen.hpp  kinoshita_li_tellegen_xy.hpp  naive.hpp
include/pscomp/field/: coef_traits.hpp  mod_int.hpp
include/pscomp/poly/: poly_mul.hpp  poly_utils.hpp
include/pscomp/transform/: fft.hpp  fft_basic.hpp  ntt.hpp  ntt_basic.hpp
include/pscomp/transpose/: DAG_FORWARD_DUAL.md  bi_convolution.hpp  dual_extraction.hpp  flat_bipoly.hpp  interleave.hpp  middle_product.hpp
include/pscomp/workspace/: arena.hpp  counting_resource.hpp  heap_tracker.hpp
results/: memory.csv  precision.csv  time.csv
scripts/: capture_precision.py  plot_benchmarks.py
src/: dev_check.cpp
tests/: CMakeLists.txt  test_helpers.hpp
tests/correctness/: test_bi_convolution.cpp  test_compose_kl_tellegen.cpp  test_compose_kl_tellegen_xy.cpp  test_cross_algorithms_ntt.cpp  test_dual_extraction.cpp  test_known_series.cpp  test_middle_product.cpp  test_random_ntt_large.cpp
tests/precision/: error_stats.hpp  test_fft_cross_algorithm.cpp
